# q-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.go  fragment.glsl  go.mod  go.sum  imgui.ini  main.cpp  pkg.json
assets/shaders/: flat.frag  flat.vert  pbr.frag  pbr.vert
pkg/: CMakeLists.txt
shaders/: vertex.glsl
src/: CMakeLists.txt  aligned_vector.hpp  app.cpp  app.hpp  app.ixx  assets.cpp  assets.hpp  assets.ixx  bullet_physics.cpp  bullet_physics.hpp  common.ixx  cubemap.hpp  entt.ixx  game.ixx  game_pch.hpp  glfw.ixx  imgui.ixx  input.cpp  input.cxx  input.hpp  inspector.cpp  inspector.cxx  inspector.hpp  main.cpp  main.cxx  math.hpp  matrix4x4.hpp  module.modulemap  octree.hpp  pch.hpp  physics.cpp  physics.hpp  player.cpp  player.hpp  plugin.cpp  plugin.hpp  render.cpp  render.hpp  shader_math.hpp  shaders.cpp  (+7 more)
src/collections/: aligned_vector.hpp  aligned_vector.ixx  circular_buffer.hpp  circular_buffer.ixx
src/dependencies/: entt.ixx  glfw.ixx  imgui.ixx  rapidjson.ixx  vma.ixx  vulkanc.ixx
src/gltf/: gltf.ixx
src/graphics/: cubemap.hpp  geometries.hpp  render.cpp  render.debug.cpp  render.debug.hpp  render.debug.ixx  render.hpp  render.init.cpp  render.init.ixx  render.ixx  render.mem.cpp  render.mem.ixx  render.pass.cpp  render.pipeline.cpp  render.plugin.ixx  render.present.cpp  render.present.ixx  shader_math.hpp  shaders.cpp  shaders.hpp  utils.cpp  utils.hpp  utils_raii.cpp  utils_raii.hpp
src/logging/: logging.ixx
src/math/: geometry.ixx  math.ixx
src/physics/: physics.cpp  physics.hpp  physics.ixx
src/player/: player.cpp  player.cppm  player.hpp
src/voxels/: voxels.cpp
tools/: cmake.go  go.mod  meta.go
